--- a/includes/footer.html
+++ b/includes/footer.html
@@ -337,3 +337,18 @@ Experience the magic of Himachal Pradesh with Trip Quest Holidays, the trusted n
     </div>
     
     </footer>
+      <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 'auto',
+      spaceBetween: 20,
+     
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+    </script>
